--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "framer-motion": "^10.16.0"
   },
   "devDependencies": {
+    "typescript": "^5.3.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/node": "^20.0.0",
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "tailwindcss": "^3.3.0"
+    "postcss": "^8.4.0"
   }
 }
